name:                ssh
version:             0.2.12.1
synopsis:            A pure-Haskell SSH server library.
description:
    This package was split from darcsden into its own project; documentation
    is lacking, but you can find example usage here:

        <http://darcsden.com/alex/darcsden/browse/src/SSHServer.hs>.

    This is not a standalone SSH server - it is intended to be used as
    a library for implementing your own servers that handle requests and
    authorization, etc. Similar to Python's Twisted Conch library.
homepage:            http://darcsden.com/alex/ssh
license:             BSD3
license-file:        LICENSE
author:              Alex Suraci <suraci.alex@gmail.com>
maintainer:          Alex Suraci <suraci.alex@gmail.com>
category:            Network
build-type:          Simple
cabal-version:       >= 1.6
stability:           Unstable
tested-with:         GHC==7.6.3

source-repository   head
    type:           darcs
    location:       http://hub.darcs.net/simon/ssh

library
  hs-source-dirs:   src

  if impl(ghc >= 6.12)
    ghc-options:   -Wall -fno-warn-unused-do-bind
  else
    ghc-options:   -Wall

  exposed-modules:
                    SSH.KeyPair,
                    SSH,
                    SSH.Channel,
                    SSH.Crypto,
                    SSH.NetReader,
                    SSH.Packet,
                    SSH.Sender,
                    SSH.Session

  other-modules:    SSH.Debug,
                    SSH.Util

  build-depends:
                    asn1-encoding,
                    asn1-types,
                    base >= 4 && < 5,
                    base64-string,
                    binary,
                    bytestring,
                    cereal,
                    containers,
                    cryptohash,
                    cryptocipher,
                    crypto-api,
                    crypto-pubkey,
                    crypto-pubkey-types,
                    HsOpenSSL >= 0.8,
                    network,
                    process,
                    random,
                    split,
                    transformers,

                    base64-bytestring

